# poiresel-risc0-consolidate-crates

./: .gitignore  Cargo.toml  README.md
host-consolidated/: Cargo.toml
host-consolidated/src/: main.rs
